# spdx-toolkit

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: error.rs  graph.rs  lib.rs  license_list.rs
